# cricbox

./: .flake8  .gitignore  Makefile  README.md  README.rst  manage.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tbump.toml
apache_conf/: cricbox-https-vhost.conf  cricbox-vhost.conf
batsman/: admin.py  models.py  tables.py  urls.py  views.py
batsman/templates/batsman/: batsman.html  single_stats.html
batting/: admin.py  apps.py  models.py
bowler/: admin.py  models.py  tables.py  urls.py  views.py
bowler/templates/bowler/: single_stats.html
cricbox/: manage.py
cricbox/batsman/: admin.py  apps.py  choices.py  models.py  tables.py  urls.py  views.py
cricbox/batsman/migrations/: 0001_initial.py
cricbox/batsman/templates/batsman/: single_stats.html
cricbox/bowler/: admin.py  apps.py  models.py  tables.py  urls.py  views.py
cricbox/bowler/migrations/: 0001_initial.py  0002_auto_20210208_0054.py  0003_bowler_number.py
cricbox/bowler/templates/bowler/: bowler.html
cricbox/cricbox/: filters.py  settings.py  settings_dev.py  sitemaps.py  urls.py  utils.py  wsgi.py
cricbox/home/: admin.py  apps.py  models.py  tables.py  urls.py  views.py
cricbox/home/migrations/: 0001_initial.py  0002_add_sql_views.py  0003_clubdocuments.py  0004_auto_20210303_0159.py
cricbox/home/static/: robots.txt
cricbox/home/templates/home/: base.html  club_documents.html  home.html  (+4 more)
cricbox/london_fields/: asgi.py  filters.py  settings.py  settings_dev.py  tables.py  urls.py  utils.py  wsgi.py
cricbox/match/: admin.py  apps.py  choices.py  models.py  tables.py  urls.py  views.py
cricbox/match/migrations/: 0001_initial.py  0002_auto_20210222_2036.py  0003_auto_20210222_2038.py  0004_auto_20210222_2042.py
cricbox/match_statistics/: admin.py  apps.py  choices.py  models.py  tables.py  urls.py  views.py
cricbox/match_statistics/migrations/: 0001_initial.py  0002_auto_20210208_0054.py
cricbox/opposition/: admin.py  apps.py  models.py
cricbox/opposition/migrations/: 0001_initial.py
cricbox/player/: admin.py  apps.py  choices.py  models.py  tables.py  urls.py  views.py
cricbox/player/migrations/: 0001_initial.py
cricbox/scripts/: load_dummy_data.py  migrations.py  seed_data.py
cricbox/venue/: admin.py  apps.py  models.py  views.py
cricbox/venue/migrations/: 0001_initial.py
home/: tables.py  urls.py  views.py
home/static/home/: main.css
home/templates/home/: about.html  base.html  base_backup.html  club_performers.html  club_positions.html  handbook.html  history.html  home.html  honours.html  links.html  match_manager.html  stats.html
london_fields/: asgi.py  settings.py  tables.py  urls.py  utils.py  wsgi.py
match/: admin.py  choices.py  models.py  tables.py  urls.py  views.py
match/templates/match/: appearances.html  fixtures.html
match_statistics/: admin.py  choices.py  models.py  tables.py  urls.py  views.py
match_statistics/templates/match_statistics/: match_overview.html
opposition/: admin.py  models.py
player/: admin.py  choices.py  models.py  tables.py  urls.py  views.py
player/templates/player/: player.html  profile.html
scripts/: load_dummy_data.py
src/: requirements.txt
src/batsman/: admin.py  choices.py  models.py  tables.py  urls.py  views.py
src/bowler/: models.py  tables.py  urls.py  views.py
src/home/: admin.py  models.py  tables.py  views.py
src/london_fields/: filters.py  settings.py  settings_dev.py  urls.py
src/match/: admin.py  models.py  tables.py  urls.py  views.py
src/match_statistics/: admin.py  choices.py  models.py  tables.py
src/opposition/: models.py
src/player/: admin.py  choices.py  models.py  tables.py  urls.py  views.py
src/scripts/: load_dummy_data.py  migrations.py
static/assets/css/: style.css
static/home/: main.css
venue/: models.py
(+10 files in other folders)
